 - Added universal AutoSwing