@@ -1,1 +1,2 @@
- - Added universal AutoSwing
+- Added Copper/Tin switch to Starter Bag
+- Added Abigail's Flower to Starter Bag
